--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EMAIL_USER=vinaypatel898944@gmail.com
 EMAIL_PASS=onsl exmy bpdt pnow
 PORT= 5000
-URL= "mongodb://localhost:27017/"
+URL= "mongodb+srv://vinay1000:Vinay2005@cluster0.cwghf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
